# pdfunlock

./: .gitignore  Cargo.toml  LICENSE  README-zh_CN.md  README.md  build.rs
.github/workflows/: build.yml
resources/icons/macos/: icon.icns
src/: main.rs
