[package]
name = "pdfunlock"
version = "0.1.0"
edition = "2024"
description = "A tool to remove permissions restrictions from PDF files"
authors = ["atopx <3940422@qq.com>"]
license = "MIT"
repository = "https://github.com/atopx/pdfunlock"

[dependencies]
mupdf = { git = "https://github.com/messense/mupdf-rs.git", tag = "v0.5.0" }
fltk = { version = "^1.5" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[package.metadata.bundle]
name = "PDFUnlock"
identifier = "io.github.atopx.pdfunlock"
icon = [
    "resources/icons/linux/32x32.png",
    "resources/icons/linux/64x64.png",
    "resources/icons/linux/128x128.png",
    "resources/icons/linux/256x256.png",
]
copyright = "Copyright (c) atopx 2025. All rights reserved."
category = "Utility"
short_description = "一个用于去除PDF权限限制的工具"
long_description = """
一个简单易用的工具，可以去除PDF文档的复制/编辑/打印等权限限制。
使用FLTK图形界面，轻量级、高性能。
"""

[package.metadata.bundle.windows]
icon = ["resources/icons/windows/icon.ico"]

[package.metadata.wix]
name = "PDFUnlock"
license = false
manufacturer = "atopx"
product-name = "PDFUnlock"
product-icon = "resources/icons/windows/icon.ico"
upgrade-guid = "A5788339-5EC2-44DD-9078-A7941A9512E4"
path-guid = "4EA94C47-0DB2-4173-9AA1-93A6B463DD4C"
